--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,9 @@ click==8.1.7
     #   typer
 colorama==0.4.6
     # via typer
-frictionless==5.15.10
+et-xmlfile==1.1.0
+    # via openpyxl
+frictionless[excel]==5.15.10
     # via -r requirements.in
 humanize==4.8.0
     # via frictionless
@@ -35,7 +37,9 @@ isodate==0.6.1
 jinja2==3.1.2
     # via frictionless
 jsonschema==4.17.3
-    # via frictionless
+    # via
+    #   frictionless
+    #   tableschema-to-template
 markdown-it-py==3.0.0
     # via rich
 marko==2.0.0
@@ -44,6 +48,8 @@ markupsafe==2.1.3
     # via jinja2
 mdurl==0.1.2
     # via markdown-it-py
+openpyxl==3.1.2
+    # via frictionless
 packaging==23.1
     # via build
 petl==1.7.14
@@ -65,7 +71,9 @@ python-dateutil==2.8.2
 python-slugify==8.0.1
     # via frictionless
 pyyaml==6.0.1
-    # via frictionless
+    # via
+    #   frictionless
+    #   tableschema-to-template
 requests==2.31.0
     # via frictionless
 rfc3986==2.0.0
@@ -81,6 +89,8 @@ six==1.16.0
     #   isodate
     #   python-dateutil
 stringcase==1.2.0
+    # via frictionless
+tableschema-to-template==0.0.13
     # via frictionless
 tabulate==0.9.0
     # via frictionless
@@ -100,6 +110,12 @@ validators==0.22.0
     # via frictionless
 wheel==0.41.2
     # via pip-tools
+xlrd==2.0.1
+    # via frictionless
+xlsxwriter==3.1.3
+    # via tableschema-to-template
+xlwt==1.3.0
+    # via frictionless
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
