--- a/requirements.txt
+++ b/requirements.txt
@@ -24,10 +24,14 @@ click==8.1.7
     #   typer
 colorama==0.4.6
     # via typer
+dpm @ git+https://github.com/splor-mg/dpm.git@main
+    # via -r requirements.in
 et-xmlfile==1.1.0
     # via openpyxl
 frictionless[excel]==5.15.10
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   dpm
 humanize==4.8.0
     # via frictionless
 idna==3.4
@@ -68,6 +72,8 @@ pyrsistent==0.19.3
     # via jsonschema
 python-dateutil==2.8.2
     # via frictionless
+python-dotenv==1.0.0
+    # via dpm
 python-slugify==8.0.1
     # via frictionless
 pyyaml==6.0.1
@@ -75,7 +81,9 @@ pyyaml==6.0.1
     #   frictionless
     #   tableschema-to-template
 requests==2.31.0
-    # via frictionless
+    # via
+    #   dpm
+    #   frictionless
 rfc3986==2.0.0
     # via frictionless
 rich==13.5.2
@@ -97,13 +105,17 @@ tabulate==0.9.0
 text-unidecode==1.3
     # via python-slugify
 typer[all]==0.9.0
-    # via frictionless
+    # via
+    #   dpm
+    #   frictionless
 typing-extensions==4.7.1
     # via
     #   frictionless
     #   pydantic
     #   pydantic-core
     #   typer
+unidecode==1.3.7
+    # via dpm
 urllib3==2.0.4
     # via requests
 validators==0.22.0
