--- a/schemas/desc_setor_governo.yaml
+++ b/schemas/desc_setor_governo.yaml
@@ -1,11 +1,26 @@
 fields:
   - name: Cód. UO Ação
+    target: uo_cod
     type: integer
   - name: UO Ação
+    target: uo_nome
     type: string
+    constraints:
+      required: true
   - name: Setor de Governo
+    target: setor_governo_desc
     type: string
+    constraints:
+      required: true
   - name: Cód Órgão
+    target: orgao_cod
     type: integer
+    constraints:
+      required: true
   - name: Descrição Órgão
+    target: orgao_nome
     type: string
+    constraints:
+      required: true
+primaryKey:
+  - Cód. UO Ação
