--- a/datapackage.yaml
+++ b/datapackage.yaml
@@ -3,9 +3,9 @@ resources:
   - name: exec_desp_realizada
     path: data-raw/exec_desp_realizada.xlsx
     sharepoint:
-        path: https://cecad365.sharepoint.com/sites/Splor/
+        path: https://cecad365.sharepoint.com/sites/DCPPN/
         drive: Documentos
-        item: General/@aid/loa2024/exec_desp_realizada.xlsx
+        item: General/DCPPN 2025/PPAG/material de apoio - gerar dos volumes/2024/exec_desp_realizada.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -13,9 +13,9 @@ resources:
   - name: exec_rec
     path: data-raw/exec_rec.xlsx
     sharepoint:
-        path: https://cecad365.sharepoint.com/sites/Splor/
+        path: https://cecad365.sharepoint.com/sites/DCPPN/
         drive: Documentos
-        item: General/@aid/loa2024/exec_rec.xlsx
+        item: General/DCPPN 2025/PPAG/material de apoio - gerar dos volumes/2024/exec_rec.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -23,9 +23,9 @@ resources:
   - name: ffp_acoes
     path: data-raw/FFP_acoes.xlsx
     sharepoint:
-        path: https://cecad365.sharepoint.com/sites/Splor/
+        path: https://cecad365.sharepoint.com/sites/DCPPN/
         drive: Documentos
-        item: General/@aid/loa2024/FFP_acoes.xlsx
+        item: General/DCPPN 2025/PPAG/material de apoio - gerar dos volumes/2024/FFP_acoes.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -53,9 +53,9 @@ resources:
   - name: correspondencia_mun_terr_desenvol
     path: data-raw/correspondencia_mun_terr_desenvol.xlsx
     sharepoint:
-        path: https://cecad365.sharepoint.com/sites/Splor/
+        path: https://cecad365.sharepoint.com/sites/DCPPN/
         drive: Documentos
-        item: General/@aid/loa2024/correspondencia_mun_terr_desenvol.xlsx
+        item: General/DCPPN 2025/PPAG/material de apoio - gerar dos volumes/2024/correspondencia_mun_terr_desenvol.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -63,9 +63,9 @@ resources:
   - name: desc_iag
     path: data-raw/desc_IAG.xlsx
     sharepoint:
-        path: https://cecad365.sharepoint.com/sites/Splor/
+        path: https://cecad365.sharepoint.com/sites/DCPPN/
         drive: Documentos
-        item: General/@aid/loa2024/desc_IAG.xlsx
+        item: General/DCPPN 2025/PPAG/material de apoio - gerar dos volumes/2024/desc_IAG.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -73,9 +73,9 @@ resources:
   - name: desc_ipu
     path: data-raw/desc_IPU.xlsx
     sharepoint:
-        path: https://cecad365.sharepoint.com/sites/Splor/
+        path: https://cecad365.sharepoint.com/sites/DCPPN/
         drive: Documentos
-        item: General/@aid/loa2024/desc_IPU.xlsx
+        item: General/DCPPN 2025/PPAG/material de apoio - gerar dos volumes/2024/desc_IPU.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -83,9 +83,9 @@ resources:
   - name: desc_classificacao_economica_despesa
     path: data-raw/desc_classificacao_economica_despesa.xlsx
     sharepoint:
-        path: https://cecad365.sharepoint.com/sites/Splor/
+        path: https://cecad365.sharepoint.com/sites/DCPPN/
         drive: Documentos
-        item: General/@aid/loa2024/desc_classificacao_economica_despesa.xlsx
+        item: General/DCPPN 2025/PPAG/material de apoio - gerar dos volumes/2024/desc_classificacao_economica_despesa.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -93,9 +93,9 @@ resources:
   - name: desc_classificacao_receita
     path: data-raw/desc_classificacao_receita.xlsx
     sharepoint:
-        path: https://cecad365.sharepoint.com/sites/Splor/
+        path: https://cecad365.sharepoint.com/sites/DCPPN/
         drive: Documentos
-        item: General/@aid/loa2024/desc_classificacao_receita.xlsx
+        item: General/DCPPN 2025/PPAG/material de apoio - gerar dos volumes/2024/desc_classificacao_receita.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -103,9 +103,9 @@ resources:
   - name: desc_fontes_de_recursos
     path: data-raw/desc_fontes_de_recursos.xlsx
     sharepoint:
-        path: https://cecad365.sharepoint.com/sites/Splor/
+        path: https://cecad365.sharepoint.com/sites/DCPPN/
         drive: Documentos
-        item: General/@aid/loa2024/desc_fontes_de_recursos.xlsx
+        item: General/DCPPN 2025/PPAG/material de apoio - gerar dos volumes/2024/desc_fontes_de_recursos.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -113,9 +113,9 @@ resources:
   - name: desc_funcao
     path: data-raw/desc_funcao.xlsx
     sharepoint:
-        path: https://cecad365.sharepoint.com/sites/Splor/
+        path: https://cecad365.sharepoint.com/sites/DCPPN/
         drive: Documentos
-        item: General/@aid/loa2024/desc_funcao.xlsx
+        item: General/DCPPN 2025/PPAG/material de apoio - gerar dos volumes/2024/desc_funcao.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -123,9 +123,9 @@ resources:
   - name: desc_grupos_de_despesa
     path: data-raw/desc_grupos_de_despesa.xlsx
     sharepoint:
-        path: https://cecad365.sharepoint.com/sites/Splor/
+        path: https://cecad365.sharepoint.com/sites/DCPPN/
         drive: Documentos
-        item: General/@aid/loa2024/desc_grupos_de_despesa.xlsx
+        item: General/DCPPN 2025/PPAG/material de apoio - gerar dos volumes/2024/desc_grupos_de_despesa.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -133,9 +133,9 @@ resources:
   - name: desc_subfuncao
     path: data-raw/desc_subfuncao.xlsx
     sharepoint:
-        path: https://cecad365.sharepoint.com/sites/Splor/
+        path: https://cecad365.sharepoint.com/sites/DCPPN/
         drive: Documentos
-        item: General/@aid/loa2024/desc_subfuncao.xlsx
+        item: General/DCPPN 2025/PPAG/material de apoio - gerar dos volumes/2024/desc_subfuncao.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -143,9 +143,9 @@ resources:
   - name: memoria_calculo
     path: data-raw/memoria_calculo.xlsx
     sharepoint:
-        path: https://cecad365.sharepoint.com/sites/Splor/
+        path: https://cecad365.sharepoint.com/sites/DCPPN/
         drive: Documentos
-        item: General/@aid/loa2024/memoria_calculo.xlsx
+        item: General/DCPPN 2025/PPAG/material de apoio - gerar dos volumes/2024/memoria_calculo.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
