chore(datapackage): Atualioza datapckage para pastas da ploa 2026.

--- a/datapackage.yaml
+++ b/datapackage.yaml
@@ -5,7 +5,8 @@ resources:
     sharepoint:
         path: https://cecad365.sharepoint.com/sites/SPLOR/
         drive: Documentos
-        item: General/@dcppn/DCPPN 2025/PPAG e LOA 2025/PPAG/material de apoio - gerar dos volumes/2025/exec_desp_realizada.xlsx
+        item: General/@dcppn/DCPPN 2026/PPAG e LOA 2026/material de apoio/material de apoio - gerar volumes/2026/exec_desp_realizada.xlsx
+              
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -15,7 +16,7 @@ resources:
     sharepoint:
         path: https://cecad365.sharepoint.com/sites/SPLOR/
         drive: Documentos
-        item: General/@dcppn/DCPPN 2025/PPAG e LOA 2025/PPAG/material de apoio - gerar dos volumes/2025/exec_rec.xlsx
+        item: General/@dcppn/DCPPN 2026/PPAG e LOA 2026/material de apoio/material de apoio - gerar volumes/2026/exec_rec.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -25,7 +26,7 @@ resources:
     sharepoint:
         path: https://cecad365.sharepoint.com/sites/SPLOR/
         drive: Documentos
-        item: General/@dcppn/DCPPN 2025/PPAG e LOA 2025/PPAG/material de apoio - gerar dos volumes/2025/FFP_acoes.xlsx
+        item: General/@dcppn/DCPPN 2026/PPAG e LOA 2026/material de apoio/material de apoio - gerar volumes/2026/FFP_acoes.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -35,7 +36,7 @@ resources:
     sharepoint:
         path: https://cecad365.sharepoint.com/sites/SPLOR/
         drive: Documentos
-        item: General/@dcppn/DCPPN 2025/PPAG e LOA 2025/PPAG/material de apoio - gerar dos volumes/2025/Nome_UO_antigas.xlsx
+        item: General/@dcppn/DCPPN 2026/PPAG e LOA 2026/material de apoio/material de apoio - gerar volumes/2026/Nome_UO_antigas.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -45,7 +46,7 @@ resources:
     sharepoint:
         path: https://cecad365.sharepoint.com/sites/SPLOR/
         drive: Documentos
-        item: General/@dcppn/DCPPN 2025/PPAG e LOA 2025/PPAG/material de apoio - gerar dos volumes/2025/codigosPoder.xlsx
+        item: General/@dcppn/DCPPN 2026/PPAG e LOA 2026/material de apoio/material de apoio - gerar volumes/2026/codigosPoder.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -55,7 +56,7 @@ resources:
     sharepoint:
         path: https://cecad365.sharepoint.com/sites/SPLOR/
         drive: Documentos
-        item: General/@dcppn/DCPPN 2025/PPAG e LOA 2025/PPAG/material de apoio - gerar dos volumes/2025/correspondencia_mun_terr_desenvol.xlsx
+        item: General/@dcppn/DCPPN 2026/PPAG e LOA 2026/material de apoio/material de apoio - gerar volumes/2026/correspondencia_mun_terr_desenvol.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -65,7 +66,7 @@ resources:
     sharepoint:
         path: https://cecad365.sharepoint.com/sites/SPLOR/
         drive: Documentos
-        item: General/@dcppn/DCPPN 2025/PPAG e LOA 2025/PPAG/material de apoio - gerar dos volumes/2025/desc_IAG.xlsx
+        item: General/@dcppn/DCPPN 2026/PPAG e LOA 2026/material de apoio/material de apoio - gerar volumes/2026/desc_IAG.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -75,7 +76,7 @@ resources:
     sharepoint:
         path: https://cecad365.sharepoint.com/sites/SPLOR/
         drive: Documentos
-        item: General/@dcppn/DCPPN 2025/PPAG e LOA 2025/PPAG/material de apoio - gerar dos volumes/2025/desc_IPU.xlsx
+        item: General/@dcppn/DCPPN 2026/PPAG e LOA 2026/material de apoio/material de apoio - gerar volumes/2026/desc_IPU.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -85,7 +86,7 @@ resources:
     sharepoint:
         path: https://cecad365.sharepoint.com/sites/SPLOR/
         drive: Documentos
-        item: General/@dcppn/DCPPN 2025/PPAG e LOA 2025/PPAG/material de apoio - gerar dos volumes/2025/desc_classificacao_economica_despesa.xlsx
+        item: General/@dcppn/DCPPN 2026/PPAG e LOA 2026/material de apoio/material de apoio - gerar volumes/2026/desc_classificacao_economica_despesa.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -95,7 +96,7 @@ resources:
     sharepoint:
         path: https://cecad365.sharepoint.com/sites/SPLOR/
         drive: Documentos
-        item: General/@dcppn/DCPPN 2025/PPAG e LOA 2025/PPAG/material de apoio - gerar dos volumes/2025/desc_classificacao_receita.xlsx
+        item: General/@dcppn/DCPPN 2026/PPAG e LOA 2026/material de apoio/material de apoio - gerar volumes/2026/desc_classificacao_receita.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -105,7 +106,7 @@ resources:
     sharepoint:
         path: https://cecad365.sharepoint.com/sites/SPLOR/
         drive: Documentos
-        item: General/@dcppn/DCPPN 2025/PPAG e LOA 2025/PPAG/material de apoio - gerar dos volumes/2025/desc_fontes_de_recursos.xlsx
+        item: General/@dcppn/DCPPN 2026/PPAG e LOA 2026/material de apoio/material de apoio - gerar volumes/2026/desc_fontes_de_recursos.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -115,7 +116,7 @@ resources:
     sharepoint:
         path: https://cecad365.sharepoint.com/sites/SPLOR/
         drive: Documentos
-        item: General/@dcppn/DCPPN 2025/PPAG e LOA 2025/PPAG/material de apoio - gerar dos volumes/2025/desc_funcao.xlsx
+        item: General/@dcppn/DCPPN 2026/PPAG e LOA 2026/material de apoio/material de apoio - gerar volumes/2026/desc_funcao.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -125,7 +126,7 @@ resources:
     sharepoint:
         path: https://cecad365.sharepoint.com/sites/SPLOR/
         drive: Documentos
-        item: General/@dcppn/DCPPN 2025/PPAG e LOA 2025/PPAG/material de apoio - gerar dos volumes/2025/desc_grupos_de_despesa.xlsx
+        item: General/@dcppn/DCPPN 2026/PPAG e LOA 2026/material de apoio/material de apoio - gerar volumes/2026/desc_grupos_de_despesa.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -135,7 +136,7 @@ resources:
     sharepoint:
         path: https://cecad365.sharepoint.com/sites/SPLOR/
         drive: Documentos
-        item: General/@dcppn/DCPPN 2025/PPAG e LOA 2025/PPAG/material de apoio - gerar dos volumes/2025/desc_subfuncao.xlsx
+        item: General/@dcppn/DCPPN 2026/PPAG e LOA 2026/material de apoio/material de apoio - gerar volumes/2026/desc_subfuncao.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -145,7 +146,7 @@ resources:
     sharepoint:
         path: https://cecad365.sharepoint.com/sites/SPLOR/
         drive: Documentos
-        item: General/@dcppn/DCPPN 2025/PPAG e LOA 2025/PPAG/material de apoio - gerar dos volumes/2025/memoria_calculo.xlsx
+        item: General/@dcppn/DCPPN 2026/PPAG e LOA 2026/material de apoio/material de apoio - gerar volumes/2026/memoria_calculo.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -155,7 +156,7 @@ resources:
     sharepoint:
         path: https://cecad365.sharepoint.com/sites/SPLOR/
         drive: Documentos
-        item: General/@dcppn/DCPPN 2025/PPAG e LOA 2025/PPAG/material de apoio - gerar dos volumes/2025/desc_base_legal_demonstrativos.xlsx
+        item: General/@dcppn/DCPPN 2026/PPAG e LOA 2026/material de apoio/material de apoio - gerar volumes/2026/desc_base_legal_demonstrativos.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -165,7 +166,8 @@ resources:
     sharepoint:
         path: https://cecad365.sharepoint.com/sites/SPLOR/
         drive: Documentos
-        item: General/@dcppn/DCPPN 2025/PPAG e LOA 2025/PPAG/material de apoio - gerar dos volumes/2025/desc_Setor_UO_Orgao.xlsx
+        item: General/@dcppn/DCPPN 2026/PPAG e LOA 2026/material de apoio/material de apoio - gerar volumes/2026/desc_Setor_UO_Orgao.xlsx
+        
     scheme: file
     format: xlsx
     encoding: utf-8
@@ -175,7 +177,7 @@ resources:
     sharepoint:
       path: https://cecad365.sharepoint.com/sites/SPLOR/
       drive: Documentos
-      item: General/@dcppn/DCPPN 2025/PPAG e LOA 2025/PPAG/material de apoio - gerar dos volumes/2025/ficha_tecnica.xlsx
+      item: General/@dcppn/DCPPN 2026/PPAG e LOA 2026/material de apoio/material de apoio - gerar volumes/2026/ficha_tecnica.xlsx
     scheme: file
     format: xlsx
     encoding: utf-8
